<resources>
    <string name="app_name">ExamenesSEQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido_a_la_app_de_ex_menes_de_la_seq">Bienvenido a la App de exámenes de la SEQ</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_tienes_una_cuenta_registrate_aqui">¿No tienes una cuenta? Registrate aqui.</string>
    <string name="registro">Registro</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="curp">CURP</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="no_hay_ex_menes_disponibles">No hay exámenes disponibles</string>
    <string name="ex_menes">Exámenes</string>
    <string name="perfil_del_alumno">Perfil del alumno</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="no_has_completado_ning_n_examen">No has completado ningún examen</string>
    <string name="con_nuestra_aplicaci_n_podr_s_acceder_y_consultar_una_amplia_variedad_de_ex_menes">Con nuestra aplicación, podrás acceder y consultar una amplia variedad de exámenes</string>
    <string name="eduqroo_ex_menes">EduQROO Exámenes</string>
    <string name="epco">EPCO</string>
    <string name="iniciar_sesi_n_o_registrate">Iniciar Sesión o Registrate</string>
    <string name="inicia_sesi_n_o_crea_una_cuenta_para_que_puedas_acceder_al_catalog_de_examenes">Inicia Sesión o crea una cuenta para que puedas acceder al catalogó de examenes</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="m_s_tarde">Más tarde</string>
    <string name="agregar_examen">Agregar Examen</string>
    <string name="no_ha_realizado_ning_n_examen">¡No ha realizado ningún examen!</string>
    <string name="complet_el_examen_en">Completó el examen en:</string>
    <string name="aprob_con">Aprobó con:</string>
    <string name="agregar_usuario">Agregar Usuario</string>


    <string-array name="duracion_exam_options">
        <item>Duración del examen</item>
        <item>1 hora</item>
        <item>2 horas</item>
        <item>3 horas</item>
    </string-array>

    <string-array name="estado_exam_options">
        <item>Estado del examen</item>
        <item>Activo</item>
        <item>Inactivo</item>
    </string-array>

</resources>