<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSEQ"
        tools:context=".fragments.registro"
        android:padding="24dp">

        <ImageView
            android:id="@+id/ic_user_add"
            android:layout_width="108dp"
            android:layout_height="118dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_agregar_usuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/txt_registro"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_user_add" />

        <EditText
            android:id="@+id/et_nombres_registro"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintTransparent"
            android:ems="10"
            android:hint="@string/nombre_s"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_registro" />

        <EditText
            android:id="@+id/et_apellidoPaterno"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintTransparent"
            android:ems="10"
            android:hint="@string/apellido_paterno"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nombres_registro" />

        <EditText
            android:id="@+id/et_apellidoMaterno"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintTransparent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/apellido_materno"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_apellidoPaterno" />

        <EditText
            android:id="@+id/et_curp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintTransparent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/curp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_apellidoMaterno" />

        <EditText
            android:id="@+id/et_correoElectronico_registro"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintTransparent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/correo_electr_nico"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_curp" />

        <EditText
            android:id="@+id/et_contrasena_registro"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintTransparent"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_correoElectronico_registro" />

        <EditText
            android:id="@+id/et_confirmar_contrasena"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintTransparent"
            android:ems="10"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_contrasena_registro" />

        <Button
            android:id="@+id/btn_registrarse"
            android:layout_width="130dp"
            android:layout_height="51dp"
            android:layout_marginTop="24dp"
            android:text="@string/registrarse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confirmar_contrasena" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>