<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgdegradado"
        tools:context=".fragments.principal.bienvenida">


        <RelativeLayout
            android:id="@+id/app_logo"
            android:layout_width="60dp"
            android:layout_height="91dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="38dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/epco"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal|center_vertical"
                android:shadowColor="@color/darkGray"
                android:shadowDx="3"
                android:shadowDy="2"
                android:shadowRadius="1.8"
                android:text="@string/epco"
                android:textAppearance="@style/epco" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/logonuevo2"
                android:elevation="4dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="353dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_logo">

            <ImageView
                android:id="@+id/ilustracionImg"
                android:layout_width="353dp"
                android:layout_height="176.25dp"
                android:background="@drawable/ilustracion2"
                android:elevation="4dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/estilocardinicio"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.959">


            <TextView
                android:id="@+id/textView2"
                style="@style/IniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/nunitobold"
                android:gravity="center"
                android:text="@string/iniciar_sesi_n_o_registrate"

                />

            <TextView
                android:id="@+id/textView3"
                style="@style/IniciarSesionSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/nunitoregular"
                android:gravity="center"
                android:text="@string/inicia_sesi_n_o_crea_una_cuenta_para_que_puedas_acceder_al_catalog_de_examenes"

                />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/loginbtnestilo"
                android:fontFamily="@font/nunitoregular"
                android:text="@string/iniciar_sesi_n" />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/loginbtnestilo2"
                android:fontFamily="@font/nunitobold"
                android:text="@string/crea_una_cuenta"
                android:textColor="@color/colorSEQ"
                android:theme="@style/Theme.ButtonChanger" />

            <TextView
                android:id="@+id/textView4"
                style="@style/IniciarSesionSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nunitobold"
                android:gravity="center"
                android:text="@string/m_s_tarde"

                />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>