<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.registro.InfoPersonal">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSEQ"
        android:padding="40dp">

        <ImageView
            android:id="@+id/ic_user_add"
            android:layout_width="108dp"
            android:layout_height="118dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_agregar_usuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/txt_registro"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_user_add" />

        <EditText
            android:id="@+id/et_nombres_registro"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintTransparent"
            android:ems="10"
            android:hint="@string/nombre_s"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_registro" />

        <EditText
            android:id="@+id/et_apellidoPaterno"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintTransparent"
            android:ems="10"
            android:hint="@string/apellido_paterno"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nombres_registro" />

        <EditText
            android:id="@+id/et_apellidoMaterno"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintTransparent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/apellido_materno"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_apellidoPaterno" />

        <EditText
            android:id="@+id/et_curp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintTransparent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/curp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_apellidoMaterno" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="Siguiente"
            android:textColor="?android:attr/textColorPrimary"
            android:background="@drawable/estilo_button_login2"
            android:theme="@style/Theme.ButtonChanger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_curp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>